# ignisshin

./: .clang  .syntastic_cpp_config  CMakeLists.txt  README.md  build.sh
src/: CMakeLists.txt  kmconfig.json  main.cpp
src/agent/: agent_mgr.cpp  ssh_agent.h
src/crypt/: CMakeLists.txt  app_crypt.cpp  app_crypt.h  crypto_utils.h
src/db/: CMakeLists.txt  app_db.cpp  app_db.h  ignisshindb.json
src/keys/: CMakeLists.txt  key_cache.h  private_key.cpp  private_key.h
src/session/: CMakeLists.txt  mux.c  session_mgr.h  ssh_ctl_master.h  ssh_mux_master.h  ssh_mux_misc.h  ssh_mux_socket.cpp  ssh_mux_socket.h  ssh_session.cpp  ssh_session.h
src/tools/: CMakeLists.txt  app_config.h
test/: CMakeLists.txt  kmconfig.json  test.sh
test/crypt/: CMakeLists.txt  main.cpp
test/keys/: testkey  testkey.pub
test/unit/: CMakeLists.txt  agent_mgr.t.cpp  keymaster_config.t.cpp  keymaster_test_main.cpp  keymaster_test_utils.cpp  keymaster_test_utils.h  main.cpp  private_key.t.cpp  ssh_agent.t.cpp
